policies/custom/bundles/cis-k8s-v1.7.1/se-restrict-privilege-escalation.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: cis-k8s-v1.7.1-restrict-privilege-escalation
  labels:
    policycontroller.gke.io/bundleName: cis-k8s-v1.7.1
  annotations:
    policycontroller.gke.io/bundleVersion: 202403.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cis-k8s-v1.7.1',
        bundleDisplayName: 'CIS Kubernetes Benchmark v1.7.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-k8s-benchmark',
        bundleVersion: '202403.0-preview',
        bundleDescription: 'Use the CIS Kubernetes Benchmark 1.7.1 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against the CIS Kubernetes Benchmark, which is a set of recommendations for configuring Kubernetes to support a robust security posture.',
        controlNumbers: '[5.2.6]',
        severity: 'UNSPECIFIED',
        description: 'Restricts containers with `allowPrivilegeEscalation` set to `true`.',
        remediation: 'Containers cannot run with `allowPrivilegeEscalation` set to `true`. Set your containers with `allowPrivilegeEscalation: false`.',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: 'd24bf9cb3555de60037a675a2198760b1eb17b452adb3be6d7b47106424cb38e'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - gke-system
    - istio-system
    - asm-system
    - config-management-system
    - config-management-monitoring
    - resource-group-system
    - cert-manager
    - anthos-identity-service
    - apigee
    - clamav
  parameters:
    exemptImages:
    - gcr.io/anthos-baremetal-release/*
